Added front/back camera switch

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -52,6 +52,13 @@
             android:text=""
             android:onClick="onSwitchInverseScan"/>
 
+        <Button
+            android:id="@+id/switch_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:onClick="onSwitchCamera"/>
+
     </LinearLayout>
 
 </RelativeLayout>
