--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimaryDark">@color/bugkoops_dark_blue</item>
     </style>
 
-    <style name="ForecastTheme" parent="AppTheme">
+    <style name="MainTheme" parent="AppTheme">
         <item name="actionBarStyle">@style/ActionBar.Solid.NoTitle</item>
     </style>
 
@@ -13,8 +13,8 @@
     </style>
 
     <style name="ActionBar.Solid.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="displayOptions">useLogo|showHome</item>
-        <!-- <item name="logo">@drawable/ic_logo</item> -->
+        <item name="displayOptions">useLogo|showHome|showTitle</item>
+        <item name="logo">@mipmap/ic_launcher</item>
     </style>
 
 </resources>
