--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,18 +3,20 @@
     <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/bugkoops_blue</item>
         <item name="colorPrimaryDark">@color/bugkoops_dark_blue</item>
-        <item name="actionBarStyle">@style/ActionBar.Solid.NoTitle</item>
+        <item name="actionBarStyle">@style/ActionBar.Home.Title</item>
     </style>
 
     <style name="MainTheme" parent="AppTheme">
+        <item name="actionBarStyle">@style/ActionBar.Home.Logo.Title</item>
     </style>
 
-    <style name="SettingsTheme" parent="AppTheme">
-    </style>
-
-    <style name="ActionBar.Solid.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <style name="ActionBar.Home.Logo.Title" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="displayOptions">useLogo|showHome|showTitle</item>
         <item name="logo">@mipmap/ic_launcher</item>
+    </style>
+
+    <style name="ActionBar.Home.Title" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="displayOptions">showHome|showTitle</item>
     </style>
 
 </resources>
