--- a/app/src/main/res/layout/list_item_last_report.xml
+++ b/app/src/main/res/layout/list_item_last_report.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:minHeight="@dimen/list_item_top_min_height"
     android:orientation="horizontal"
     android:background="@drawable/top_touch_selector">
 
