--- a/app/src/main/res/layout/list_item_last_report.xml
+++ b/app/src/main/res/layout/list_item_last_report.xml
@@ -35,8 +35,8 @@
         android:orientation="vertical"
         android:gravity="center_horizontal|bottom">
 
-        <ImageView
-            android:id="@+id/list_item_report_icon"
+        <TextView
+            android:id="@+id/list_item_report_description_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"/>
