--- a/app/src/main/res/layout/list_item_report.xml
+++ b/app/src/main/res/layout/list_item_report.xml
@@ -6,37 +6,36 @@
     android:gravity="center_vertical"
     android:minHeight="@dimen/list_item_min_height"
     android:orientation="horizontal"
-    android:background="@drawable/touch_selector">
-
-    <FrameLayout
-        android:layout_width="60dp"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/list_item_report_icon"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </FrameLayout>
+    android:background="@drawable/touch_selector"
+    android:weightSum="100">
 
     <LinearLayout
-        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingStart="15dp"
         android:layout_width="0dp"
-        android:layout_weight="7"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/list_item_report_date_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="80">
 
         <TextView
             android:id="@+id/list_item_report_title_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"/>
+
+        <TextView
+            android:id="@+id/list_item_report_description_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceSmall"/>
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/list_item_report_date_textview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_weight="20"/>
 
 </LinearLayout>
