--- a/app/src/main/res/layout/list_item_last_report.xml
+++ b/app/src/main/res/layout/list_item_last_report.xml
@@ -5,23 +5,24 @@
     android:gravity="center_vertical"
     android:minHeight="@dimen/list_item_top_min_height"
     android:orientation="horizontal"
-    android:background="@drawable/top_touch_selector">
+    android:background="@drawable/top_touch_selector"
+    android:weightSum="100">
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_weight="7"
+        android:layout_weight="60"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/list_item_report_date_textview"
+            android:id="@+id/list_item_report_description_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceLarge"
+            android:textAppearance="?android:textAppearanceSmall"
             android:textColor="@color/white" />
 
     </LinearLayout>
@@ -29,17 +30,10 @@
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_weight="5"
+        android:layout_weight="40"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal|bottom">
-
-        <TextView
-            android:id="@+id/list_item_report_description_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/list_item_report_title_textview"
@@ -47,6 +41,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/list_item_report_date_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@color/grey" />
     </LinearLayout>
 </LinearLayout>
