--- a/app/src/main/res/layout/activity_report_detail.xml
+++ b/app/src/main/res/layout/activity_report_detail.xml
@@ -1,7 +1,8 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/detail_report_container"
-    android:name="com.intel.bugkoops.ReportDetailFragment"
-    tools:layout="@layout/fragment_report_detail"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    tools:context="com.intel.bugkoops.ReportDetailActivity"
+    tools:ignore="MergeRootFrame" />
