--- a/app/src/main/res/layout/fragment_report_detail.xml
+++ b/app/src/main/res/layout/fragment_report_detail.xml
@@ -8,29 +8,39 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-        <EditText
-            android:id="@+id/detail_report_title_textview"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/detail_report_date_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <EditText
+                android:id="@+id/detail_report_title_textview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
 
-        <EditText
-            android:id="@+id/detail_report_text_textview"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+            <TextView
+                android:id="@+id/detail_report_date_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/detail_report_text_textview"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:lines="20"
+                android:minLines="6"
+                android:gravity="top|start"
+                android:maxLines="10"
+                android:scrollbars="vertical" />
 
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
