--- a/app/src/main/res/layout/activity_bugzilla_send.xml
+++ b/app/src/main/res/layout/activity_bugzilla_send.xml
@@ -43,6 +43,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:textColor="#FF0000"/>
+        android:textColor="#FF0000"
+        android:gravity="center"/>
 
 </LinearLayout>
