Added Bugzilla UI product spinner

--- a/app/src/main/res/layout/activity_bugzilla_send.xml
+++ b/app/src/main/res/layout/activity_bugzilla_send.xml
@@ -38,6 +38,18 @@
         android:text="Connect"
         android:onClick="onConnect"/>
 
+    <Spinner
+        android:id="@+id/bugzilla_send_product_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <Spinner
+        android:id="@+id/bugzilla_send_component_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/bugzilla_send_status_textview"
         android:layout_width="fill_parent"
