--- a/app/src/main/res/layout/activity_bugzilla_send.xml
+++ b/app/src/main/res/layout/activity_bugzilla_send.xml
@@ -50,6 +50,36 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
+    <Spinner
+        android:id="@+id/bugzilla_send_version_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <Spinner
+        android:id="@+id/bugzilla_send_os_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <Spinner
+        android:id="@+id/bugzilla_send_platform_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <Spinner
+        android:id="@+id/bugzilla_send_priority_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <Spinner
+        android:id="@+id/bugzilla_send_severity_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/bugzilla_send_status_textview"
         android:layout_width="fill_parent"
