--- a/app/src/main/res/layout/activity_bugzilla_send.xml
+++ b/app/src/main/res/layout/activity_bugzilla_send.xml
@@ -36,49 +36,57 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Connect"
-        android:onClick="onConnect"/>
+        android:onClick="onConnect" />
 
     <Spinner
         android:id="@+id/bugzilla_send_product_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_component_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_version_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_os_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_platform_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_priority_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <Spinner
         android:id="@+id/bugzilla_send_severity_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/bugzilla_send_send_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:onClick="onSend"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/bugzilla_send_status_textview"
@@ -86,6 +94,6 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:textColor="#FF0000"
-        android:gravity="center"/>
+        android:gravity="center" />
 
 </LinearLayout>
